--- a/src/Components/QuestionMark.css
+++ b/src/Components/QuestionMark.css
@@ -1,7 +1,7 @@
-#mute {
+#question-mark {
   position: absolute;
-  top: 10px;
-  right: 60px;
+  top: 15px;
+  right: 10px;
   color: white;
   cursor: pointer;
   z-index: 100;
