adds new background and initial camera position

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@
 
   /* import image from internet */
 
-  background-image: url('https://wallpapercave.com/wp/wp12401706.jpg');
+  /* background-image: url('https://wallpapercave.com/wp/wp12401706.jpg'); */
+  background-image: url('../public/ninSF_BG_sample.png');
   background-size: cover;
   
   font-synthesis: none;
