--- a/src/Components/ChatWindow.css
+++ b/src/Components/ChatWindow.css
@@ -6,18 +6,19 @@
   scroll-behavior: smooth;
   overflow-y: auto;
   overflow-x: hidden;
-  border-radius: 30px 30px 0 0;
   margin: 10px;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 #chat-window::-webkit-scrollbar {
   background-color: rgba(250, 235, 215, 0.226);
-  border-radius: 50px;
+  /* border-radius: 50px; */
 }
 
 #chat-window::-webkit-scrollbar-thumb {
-  background-color: #3d3d3d;
-  border-radius: 50px;
+  background-color: #4e4e4ed8;
+  /* background-color: #3d3d3d; */
+  /* border-radius: 50px; */
 }
 
 #chat-form {
@@ -31,10 +32,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #3d3d3d;
+  background-color: #4e4e4ed8;
+  /* background-color: #3d3d3d; */
   border-radius: 50%;
-  width: 2.3em;
-  height: 2.3em;
+  width: 2.1em;
+  height: 2.1em;
 }
 
 #send-button img {
@@ -46,9 +48,10 @@
 #chat-input {
   width: 70%;
   padding: 10px;
-  border-radius: 20px;
+  border-radius: 5px;
   border: none;
   font-size: 0.8em;
-  height: 1em;
-  background-color: #3d3d3d;
+  height: 0.8em;
+  background-color: #4e4e4ed8;
+  font-family: 'Courier New', Courier, monospace;
 }
