--- a/src/Components/ExplainerModal.css
+++ b/src/Components/ExplainerModal.css
@@ -20,8 +20,16 @@
   padding: 0 40px;
   border: 1px solid rgb(235, 235, 235);
   box-shadow: inset 0 0 5px #000000;
-  background: linear-gradient(120deg, rgba(20, 99, 0, 0.75) 15%, hsla(108, 100%, 17%, 0.493) 60%, rgba(20, 99, 0, 0.75) 90%, rgba(17, 87, 0, 0.267) 100%);
-  /* border-radius: 30px; */
+  /* background: linear-gradient(120deg,
+      rgba(20, 99, 0, 0.75) 15%,
+      hsla(108, 100%, 17%, 0.493) 60%,
+      rgba(20, 99, 0, 0.75) 90%,
+      rgba(17, 87, 0, 0.267) 100%); */
+  background: linear-gradient(120deg,
+      #97a800bf 15%,
+      hsla(64, 100%, 29%, 0.493) 60%,
+      #879600bf 90%,
+      rgba(139, 137, 0, 0.267) 100%);
   width: 70%;
   font-family: LCD;
 }
@@ -80,11 +88,11 @@
 
 #explainer-content button {
   position: relative;
-  background: linear-gradient(to right, #00000000, #02a502f1, #ffffff00);
+  background: linear-gradient(to right, #00000000, #a59a02f1, #ffffff00);
   background-color: transparent;
   border: none;
-  border-top: 1px solid green;
-  border-bottom: 1px solid green;
+  border-top: 1px solid rgb(119, 128, 0);
+  border-bottom: 1px solid rgb(128, 119, 0);
   padding: 0.5em 2em;
   text-align: center;
   text-decoration: none;
@@ -97,13 +105,13 @@
 }
 
 #explainer-content button:hover {
-  border-top: 1px solid #00a700;
-  border-bottom: 1px solid #00a700;
+  border-top: 1px solid #c5d300;
+  border-bottom: 1px solid #c5d300;
   transition: all 0.3s;
 }
 
 #explainer-content button:active {
-  border-top: 1px solid #00a700;
-  border-bottom: 1px solid #00a700;
+  border-top: 1px solid #c5d300;
+  border-bottom: 1px solid #c5d300;
   transition: all 0.3s;
 }
