--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .container {
   position: fixed;
-  bottom: 20%;
-  right: 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,10 +12,8 @@
   backdrop-filter: blur(5px);
   box-shadow: 1px 1px 2px 1px rgba(8, 8, 8, 0.13);
   justify-content: flex-end;
-  height: 60%;
   padding-bottom: 10px;
-  width: 30%;
-  min-width: 300px;
+  min-width: 320px;
 }
 
 .container-header {
@@ -25,12 +21,56 @@
   line-height: 2em;
   width: 100%;
   border-radius: 15px 15px 0 0;
+  display: flex;
+  justify-content: space-between;
 }
 
-.container h4 {
+.container-header h4 {
   margin: 10px 0 0 15px;
   padding: 0;
   font-size: 1.5em;
+  line-height: 1.5em;
   font-family: 'Summer Pixel', sans-serif;
   color: #faee4a;
+}
+
+.container-header img {
+  width: 1.8em;
+  height: 1.8em;
+  margin: 10px 15px 0 0;
+  cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  .container {
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
+    height: 75%;
+    width: 80%;
+  }
+
+  .minimized-container {
+    position: fixed;
+    bottom: 0;
+    min-width: 50%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    bottom: 20%;
+    right: 10%;
+    height: 60%;
+    width: 30%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    bottom: 20%;
+    right: 15%;
+    height: 60%;
+    width: 30%;
+  }
 }
