--- a/src/Components/ExplainerModal.css
+++ b/src/Components/ExplainerModal.css
@@ -8,7 +8,6 @@
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.781);
-  /* background-color: #023100bb; */
   color: #f7f7f7;
 }
 
@@ -20,11 +19,6 @@
   padding: 0 40px;
   border: 1px solid rgb(235, 235, 235);
   box-shadow: inset 0 0 5px #000000;
-  /* background: linear-gradient(120deg,
-      rgba(20, 99, 0, 0.75) 15%,
-      hsla(108, 100%, 17%, 0.493) 60%,
-      rgba(20, 99, 0, 0.75) 90%,
-      rgba(17, 87, 0, 0.267) 100%); */
   background: linear-gradient(120deg,
       #97a800bf 15%,
       hsla(64, 100%, 29%, 0.493) 60%,
@@ -102,16 +96,34 @@
   transition: all 0.3s;
   font-family: LCD;
   margin-bottom: 0.8em;
+  color: #f7f7f7;
 }
 
 #explainer-content button:hover {
   border-top: 1px solid #c5d300;
   border-bottom: 1px solid #c5d300;
   transition: all 0.3s;
+  color: #f7f7f7;
 }
 
 #explainer-content button:active {
   border-top: 1px solid #c5d300;
   border-bottom: 1px solid #c5d300;
   transition: all 0.3s;
+  color: #f7f7f7;
+}
+
+@media screen and (max-width: 767px) {
+  #explainer-content {
+    height: 75%;
+    padding: 0 20px;
+  }
+
+  #explainer-content h1 {
+    margin-top: 0.5em;
+  }
+
+  #explainer-content p {
+    overflow-y: auto;
+  }
 }
